Setting up the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-*.log
-*.pot
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# django
+venv
 *.pyc
-local_settings.py
+staticfiles
+auctions/local_settings.py
+*.db
+activate.bat
