--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==1.6
 South==0.8.3
 dj-database-url==0.2.2
 dj-static==0.0.5
 gunicorn==18.0
 pil==1.1.7
+psycopg2==2.5.1
 pytz==2013.9
 static==0.4
 wsgiref==0.1.2
