--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6
 South==0.8.3
 dj-database-url==0.2.2
 dj-static==0.0.5
+django-storages==1.1.8
 gunicorn==18.0
 pil==1.1.7
 psycopg2==2.5.1
