--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ dj-database-url==0.2.2
 dj-static==0.0.5
 django-storages==1.1.8
 gunicorn==18.0
-pil==1.1.7
+pillow==2.3.0
 psycopg2==2.5.1
 pytz==2013.9
 static==0.4
